# apertium-spa-ast

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  NEWS  README  apertium-es-ast.ast-es.t1x  apertium-es-ast.ast.acx  apertium-es-ast.ast.dix  apertium-es-ast.ast.tsx  apertium-es-ast.es-ast.dix  apertium-es-ast.es-ast.t1x  apertium-es-ast.es.dix  apertium-es-ast.es.tsx  apertium-es-ast.post-ast.dix  apertium-es-ast.post-es-ast.t1x  apertium-es-ast.post-es.dix  apertium-es-ast.post2-ast.dix  apertium-spa-ast.ast.tsx  apertium-spa-ast.post-spa-ast.t1x  apertium-spa-ast.spa-ast.t1x  apertium-spa-ast.spa.tsx  ast-es-unsupervised.make  ast-es.mode  ast-es.prob  ast-spa.prob  configure.ac  es-ast-unsupervised.make  es-ast.mode  es-ast.prob  modes.xml  pending-tests.sh  regression-tests.sh  spa-ast-unsupervised.make
dev/: asturian.freqlist.txt  inconsistency.sh  testvoc-summary.ast-es.txt  testvoc-summary.es-ast.txt  testvoc.sh
scripts/: script_apostrofes  script_cliticos  script_cliticos_aburrir  script_cliticos_dir  script_cliticos_enviar  script_cliticos_falar  script_cliticos_haber  script_cliticos_hacer  script_cliticos_llamber  script_cliticos_sembrar  script_cliticos_ser  script_cliticos_tener  script_contracciones  script_neutro  script_perifrasis  script_verbos
test/: spa-ast-pending-chunker-expected.txt  spa-ast-pending-chunker2-expected.txt  spa-ast-pending-generator-expected.txt  spa-ast-pending-input.txt  spa-ast-pending-morph-expected.txt  spa-ast-pending-postgen-expected.txt  spa-ast-pending-postgen-gold.txt  spa-ast-pending-postgen2-expected.txt  spa-ast-pending-pretransfer-expected.txt  spa-ast-pending-tagger-expected.txt  tests.json
